@@ -282,7 +282,7 @@ real calc_forces_pair(real *xi_opt, real *forces, int flag)
 	/* energy contributions */
 	forces[energy_p + h] /= (real)inconf[h];
 	forces[energy_p + h] -= force_0[energy_p + h];
-	tmpsum += eweight * conf_weight[h] * SQR(forces[energy_p + h]);
+	tmpsum += conf_weight[h] * SQR(eweight * forces[energy_p + h]);
 #ifdef STRESS
 	/* stress contributions */
 	if (uf && us) {
@@ -290,7 +290,7 @@ real calc_forces_pair(real *xi_opt, real *forces, int flag)
 	    forces[stress_p + 6 * h + i] /= conf_vol[h - firstconf];
 	    forces[stress_p + 6 * h + i] -= force_0[stress_p + 6 * h + i];
 	    tmpsum +=
-	      sweight * conf_weight[h] * SQR(forces[stress_p + 6 * h + i]);
+	      conf_weight[h] * SQR(sweight * forces[stress_p + 6 * h + i]);
 	  }
 	}
 #endif /* STRESS */
